# terrabase

./: .editorconfig  .gitignore  404.html  Makefile  README.md  go.mod  go.sum  index.html  mkdocs.yml
api/: Dockerfile  pyproject.toml
api/specs/terrabase/backend_type/v1/: backend_type_pb2.py
api/specs/terrabase/drift_report/v1/: drift_report_pb2.py
api/specs/terrabase/environment/v1/: environment_pb2.py
api/specs/terrabase/lock/v1/: lock_pb2.py
api/specs/terrabase/organization/v1/: organization_pb2.py
api/specs/terrabase/state_version/v1/: state_version_pb2.pyi
api/specs/terrabase/team/v1/: team_pb2.py
api/specs/terrabase/user/v1/: user_pb2.py
api/specs/terrabase/user_role/v1/: user_role_pb2.py  user_role_pb2.pyi
api/specs/terrabase/workspace/v1/: workspace_pb2.py
api/terrabase_api/: __init__.py  docs.py  logging.py  main.py  tags.py
api/terrabase_api/auth/: __init__.py  api_keys.py  context.py  middleware.py  passwords.py  tokens.py
api/terrabase_api/middleware/: __init__.py  access_log.py
api/terrabase_api/routers/: __init__.py  auth.py  organization.py  team.py  user.py
api/terrabase_api/services/: __init__.py  auth.py  organization.py  team.py  user.py
api/terrabase_api/specs/terrabase/application/v1/: application_pb2.py  application_pb2_grpc.py
api/terrabase_api/specs/terrabase/auth/v1/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
api/terrabase_api/specs/terrabase/drift_report/v1/: drift_report_pb2_grpc.py
api/terrabase_api/specs/terrabase/environment/v1/: environment_pb2_grpc.py
api/terrabase_api/specs/terrabase/user/v1/: user_pb2.py  (+2 more)
api/terrabase_api/types/: __init__.py
api/terrabase_api/utils/: __init__.py  request.py  rpc.py
(+149 files in other folders)
