[project]
name = "terrabase"
version = "0.1.0"
description = "Terrabase API"
authors = [{name = "Tyler Walker", email = "twalker1998@gmail.com"}]
requires-python = ">=3.12"

[dependency-groups]
base = [
    "google-api-python-client>=2.187.0,<3",
    "googleapis-common-protos>=1.63.0,<2",
    "protobuf>=5.0.0,<6"
]
dev = [
    {include-group = "base"},
    "ruff==0.14.5"
]

[tool.ruff]
exclude = [
    "specs"
]
